# fastapi-paysense-demo

./: .dockerignore  .env.local  .env.test  .gitignore  Dockerfile  Makefile  Readme.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pre-commit-config.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 165b1ab38fd5_tables_added_with_relation.py  1a5d6b5aaae4_tables_added_with_relation_and_nullable.py  4dbdb7517fa3_renamed.py  9fc6eaaad54f_new_tables_added.py  b0fe48885a4a_tables_added.py  fa98dd73ce36_tables_added.py
app/: alembic.ini  docker-entrypoint.sh  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: d5d55d6fe50b_initial_migration.py  ede002b12124_create_account_table.py  fd439f7ef4b9_new_field_addition.py
app/app/: main.py
app/app/core/: config.py
app/app/crud/: __init__.py  base.py  crud_dummy_user.py
app/app/db/: base.py  base_class.py  session.py
app/app/models/: dummy_user.py
app/app/schemas/: dummy_user.py  health_check.py
data/: postmaster.pid
data/global/: 1260  2671  2672  2676  2694  2695  pg_control  pg_internal.init
data/pg_stat/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
data/pg_stat_tmp/: db_16384.stat  global.stat
docs/: development-environment.md  important-docs.md  migrations.md
src/: app.py  config.py  server.py
src/apps/: org_router.py  user_router.py
src/common_utils/: date_utils.py  logging.py
src/database/: alembic_base.py  base.py  orm.py  session.py
src/models/: accessor.py  entity.py  id.py  id_prefix.py
src/routes/: org_router.py  user_router.py
(+74 files in other folders)
