[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]


[tool.poetry.dependencies]
tenacity = "^8.2.3"
uvicorn = "^0.23.2"
python = "^3.10"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
websockets = "11.0.3"
psycopg2-binary = "^2.8.5"
shortuuid = "^1.0.11"
sqlakeyset = "^2.0.1684285512"
varname = "^0.11.1"
python-json-logger="^2.0.7"
sentry-sdk="^1.34.0"
pytest="^7.4.3"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"